--- a/about_me.html
+++ b/about_me.html
@@ -38,15 +38,18 @@
         <main>
             <div class="container">
                 <h2>
-                    What is this about
+                    Who am I
                 </h2>
                 <p>
-                    This website is my central hub for organizing and showcasing the development of the game I’m creating. 
-                    It’s a space to document my progress, share detailed insights into the game’s design, mechanics, and story, and keep myself motivated. 
-                    I’ll post regular updates, including concept art, prototypes, and behind-the-scenes stories, making everything accessible for anyone interested.
-                    Beyond development, it’s a platform to connect with others—game developers, artists, and enthusiasts—by sharing my journey openly and inviting feedback and collaboration. 
-                    This site is both a personal creative diary and a space to build a community around shared passions. Welcome to my journey!
+                    I'm a brazilian student living on Rio de Janeiro.
                 </p>
+            </div>
+            <div class="container">
+                <h2>
+                    Contact me
+                </h2>
+                <a href="https://www.aseprite.org/"><img src="imgs/bluesky_logo.png" width="100" height="100"></a>
+                <a href="https://www.aseprite.org/"><img src="imgs/github-icon.png" width="100" height="100"></a>
             </div>
             <footer>
                 <nav>
