--- a/blog.html
+++ b/blog.html
@@ -38,10 +38,10 @@
         <main>
             <div class="container">
                 <h2>
-                    
+                    Here I'll put some things I wanna share
                 </h2>
                 <p>
-                    
+                    Hello everyone
                 </p>
             </div>
             <footer>
