--- a/about_me.html
+++ b/about_me.html
@@ -41,8 +41,8 @@
                     Who am I
                 </h2>
                 <p>
-                    I’m a Brazilian student living in Rio de Janeiro, balancing my studies with my passion for game development. Lord Burned is my alter ego.
-                </p> 
+                    I'm a brazilian student living on Rio de Janeiro.
+                </p>
             </div>
             <div class="container">
                 <h2>
