--- a/blog.html
+++ b/blog.html
@@ -38,10 +38,14 @@
         <main>
             <div class="container">
                 <h2>
-                    Here I'll put some things I wanna share
+                    09-02-2025
                 </h2>
+                    <video width="320" height="240" controls>
+                        <source src="imgs/idle_animation.mp4" type="video/mp4">
+                      Your browser does not support the video tag.
+                    </video>
                 <p>
-                    Hello everyone
+                    Idle Animation. My fisrt attempt to make a idle animation for a player.
                 </p>
             </div>
             <footer>
