--- a/about_me.html
+++ b/about_me.html
@@ -41,7 +41,8 @@
                     Who am I
                 </h2>
                 <p>
-                    I'm a brazilian student living on Rio de Janeiro.
+                    I'm a brazilian student living on Rio de Janeiro. 
+                    This is a hobby and a personal project. Step by step I hope I can finish this and have some good time.
                 </p>
             </div>
             <div class="container">
