--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,15 @@
         <main>
             <div class="container">
                 <h2>
+                    07-03-2025
+                </h2>
+                <p>
+                    Been a while but I'll try to keep doing this, probably next week I post more things about Godot and some pixel art.
+                    I'll make a repository on github with all files and scripts I'll use on the game.
+                </p>
+            </div>
+            <div class="container">
+                <h2>
                     09-02-2025
                 </h2>
                     <video width="320" height="240" controls>
